<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/actionExplore"
            android:icon="@drawable/ic_explore"
            android:title="@string/action_explore"/>

        <item
            android:id="@+id/actionMyBooks"
            android:icon="@drawable/ic_book"
            android:title="@string/action_my_books"/>

        <item
            android:id="@+id/actionProfile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/action_my_profile" />

    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/actionSettings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/actionAbout"
            android:icon="@drawable/ic_book"
            android:title="@string/action_about" />
    </group>
</menu>
