<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:paddingBottom="10dp"
             android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/loading"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="visible">
        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <cn.kejin.gitbook.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:gravity="center"
            android:text="@string/is_loading"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reload"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone">

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:text="@string/click_to_reload"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noMore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible">

        <cn.kejin.gitbook.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:gravity="center"
            android:text="@string/no_more_data"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>
</FrameLayout>