<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/customStatusBar"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="?attr/colorPrimaryDark"
            android:visibility="visible"/>

        <FrameLayout
            android:id="@+id/customTitleBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/menuCloseButton"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_vector_arrow_white_48dp" />

            <cn.kejin.gitbook.views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="75dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <include
                    layout="@layout/layout_horizontal_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="50dp" />
                <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_gitbook_logo"-->
                <!--android:layout_margin="20dp"/>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <cn.kejin.gitbook.views.CustomEditText
                        android:id="@+id/userNameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/bg_login_input"
                        android:cursorVisible="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:hint="@string/login_username"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/textPrimary"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="15sp" />

                    <cn.kejin.gitbook.views.CustomEditText
                        android:id="@+id/passwordEdit"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bg_login_input"
                        android:cursorVisible="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/textPrimary"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="15sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|right"
                        android:orientation="horizontal"
                        android:paddingBottom="25dp"
                        android:paddingTop="15dp">

                        <cn.kejin.gitbook.views.CustomTextView
                            android:id="@+id/forgotPwdBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/login_forgot_pwd"
                            android:textColor="@color/textPrimary"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_signin_btn">

                        <cn.kejin.gitbook.views.CustomTextView
                            android:id="@+id/signIn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:gravity="center"
                            android:text="@string/login_signin_btn"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_signup_btn">

                        <cn.kejin.gitbook.views.CustomTextView
                            android:id="@+id/signUp"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:gravity="center"
                            android:text="@string/login_signup_btn"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:layout_weight="1"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>